PROD_10-24-19/force-app/main/default/objects/Contact/fields/Reported_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reported_Notes__c</fullName>
    <description>BAM Finance</description>
    <label>Reported Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>