PROD_10-24-19/force-app/main/default/objects/Contact/fields/Researcher__c.field-meta.xml
<CustomField>
    <fullName>Researcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Researcher</label>
    <type>Checkbox</type>
</CustomField>