PROD_10-24-19/force-app/main/default/objects/Contact/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>Secondary email address</description>
    <inlineHelpText>Secondary email address</inlineHelpText>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>