PROD_10-24-19/force-app/main/default/objects/Contact/fields/Strategic_Contact__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Contact</label>
    <type>Checkbox</type>
</CustomField>