PROD_10-24-19/force-app/main/default/objects/Contact/fields/UHNW__c.field-meta.xml
<CustomField>
    <fullName>UHNW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UHNW</label>
    <type>Checkbox</type>
</CustomField>