PROD_10-24-19/force-app/main/default/objects/Contact/listViews/BAC_Contacts.listView-meta.xml
<ListView>
    <fullName>BAC_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BAC_Owner__c</field>
        <operation>equals</operation>
        <value>Paul Forestell</value>
    </filters>
    <label>BAC Contacts</label>
    <sharedTo>
        <roleAndSubordinates>BIM</roleAndSubordinates>
    </sharedTo>
</ListView>