PROD_10-24-19/force-app/main/default/objects/Contact/listViews/BAM_2015_Holiday_Party.listView-meta.xml
<ListView>
    <fullName>BAM_2015_Holiday_Party</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>Business_Group__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>BAM 2015 Holiday Party</label>
    <sharedTo>
        <role>BAM</role>
    </sharedTo>
</ListView>