PROD_10-24-19/force-app/main/default/objects/Contact/listViews/BAM_Clean_up.listView-meta.xml
<ListView>
    <fullName>BAM_Clean_up</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>PFG_CRM_Lead__c</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>resolute</value>
    </filters>
    <label>BAM Clean up</label>
    <sharedTo>
        <role>BAM</role>
    </sharedTo>
</ListView>