PROD_10-24-19/force-app/main/default/objects/Contact/listViews/BFIN_Canaada_Debt_Prospects.listView-meta.xml
<ListView>
    <fullName>BFIN_Canaada_Debt_Prospects</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <label>BFIN Canada Debt Prospects</label>
    <sharedTo>
        <group>BFIN_Brokerage</group>
    </sharedTo>
</ListView>