PROD_10-24-19/force-app/main/default/objects/Contact/listViews/BRP_USA_All_Contacts.listView-meta.xml
<ListView>
    <fullName>BRP_USA_All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>BRP_Owner__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>BRP_Key_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>mota,bakhteyar,root</value>
    </filters>
    <label>BRP USA  All Contacts</label>
    <sharedTo>
        <role>BRP_Business_Development</role>
    </sharedTo>
</ListView>