PROD_10-24-19/force-app/main/default/objects/Contact/listViews/Created_by_Joe.listView-meta.xml
<ListView>
    <fullName>Created_by_Joe</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>5/24/2017 12:00 AM</value>
    </filters>
    <label>Modified by Joe</label>
    <sharedTo>
        <group>BRP</group>
    </sharedTo>
</ListView>