PROD_10-24-19/force-app/main/default/objects/Contact/listViews/Investor_Day_BIM.listView-meta.xml
<ListView>
    <fullName>Investor_Day_BIM</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Group_CVENT__c</columns>
    <columns>Registration_Type_CVENT__c</columns>
    <columns>Participant_Type__c</columns>
    <columns>Private_Investor_Day_Invitee_Type__c</columns>
    <columns>Invitee_Type_BIM_Investor_Day__c</columns>
    <columns>Private_Investor_Day_Invited_by__c</columns>
    <columns>Private_Investor_Day_Fund_Meetings__c</columns>
    <columns>Public_Investor_Day_Invite_Sent_From__c</columns>
    <columns>Private_Investor_Day_Comments__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invitee_Type_BIM_Investor_Day__c</field>
        <operation>contains</operation>
        <value>Investor,Prospect,Internal</value>
    </filters>
    <label>Investor Day - BIM</label>
    <sharedTo>
        <role>BAM</role>
        <role>PFG</role>
        <role>PFG_CRM</role>
    </sharedTo>
</ListView>