PROD_10-24-19/force-app/main/default/objects/Contact/listViews/Investor_Day_Private1.listView-meta.xml
<ListView>
    <fullName>Investor_Day_Private1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Private_Investor_Day_Invitee_Type__c</columns>
    <columns>Private_Investor_Day_Invited_by__c</columns>
    <columns>Private_Investor_Day_Fund_Meetings__c</columns>
    <columns>Invite_Sent_From_Private_Invest_Day_C__c</columns>
    <columns>Private_Investor_Day_Comments__c</columns>
    <columns>PFG_CRM_Lead__c</columns>
    <columns>Account_PFG_Primary_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Private_Investor_Day_Invitee_Type__c</field>
        <operation>equals</operation>
        <value>Investor</value>
    </filters>
    <filters>
        <field>Private_Investor_Day_Fund_Meetings__c</field>
        <operation>equals</operation>
    </filters>
    <label>Investor Day - Private</label>
    <sharedTo>
        <role>BAM</role>
        <role>PFG</role>
        <role>PFG_CRM</role>
    </sharedTo>
</ListView>