PROD_10-24-19/force-app/main/default/objects/Contact/listViews/Marco_mailing_List_SFO.listView-meta.xml
<ListView>
    <fullName>Marco_mailing_List_SFO</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Marco mailing List - SFO</label>
    <sharedTo>
        <group>PFG_Support_Group</group>
    </sharedTo>
</ListView>