PROD_10-24-19/force-app/main/default/objects/Contact/listViews/Maritime_Retail_Buyers_List.listView-meta.xml
<ListView>
    <fullName>Maritime_Retail_Buyers_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>Contact_Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketing_List__c</field>
        <operation>includes</operation>
        <value>Maritime Retail Buyers List</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notEqual</operation>
        <value>To Be Deleted,No Longer w/ Company,Retired / Inactive</value>
    </filters>
    <label>BFIN Maritime Retail Buyers List</label>
    <sharedTo>
        <group>BFIN_Brokerage</group>
    </sharedTo>
</ListView>